--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -239,6 +239,8 @@ section#contact
 		.extra-padding
 			padding-left: 1px
 			padding-right: 1px
+		.email-font
+			font-size: 0.96em
 			
 footer
 	color: #fff
