--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -48,7 +48,7 @@ header
 	-moz-background-size: cover
 	background-size: cover
 	-o-background-size: cover
-	min-height: 50%
+	min-height: 400px
 	.header-content 
 		position: relative
 		width: 100%
@@ -67,7 +67,7 @@ header
 				text-transform: uppercase
 				font-weight: 700
 				font-size: 68px
-				text-shadow: -1px -2.1px 1px rgba(0, 0, 0, 0.7), 4px 4px 1px rgba(0, 0, 0, 0.8)
+				text-shadow: -1px -2.1px 1px rgba(0, 0, 0, 1), 4px 4px 1px rgba(0, 0, 0, 0.8)
 			p 
 				margin-bottom: 50px
 				font-size: 16px
@@ -77,8 +77,14 @@ header
 				font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif
 				font-size: 26px
 				line-height: 45px
+				// text-shadow: 2px 2px 3px rgba(0,0,0,0.6), 2px 2px 3px rgba(0,0,0,0.6)
+				// text-shadow: 1.3px 1.3px 1px rgba(0, 0, 0, 0.9), -1.3px -1.3px 2px rgba(0, 0, 0, 0.7)
 				text-shadow: 2px 2px 3px rgba(0,0,0,0.6), 2px 2px 3px rgba(0,0,0,0.6)
-				text-shadow: 1.3px 1.3px 1px rgba(0, 0, 0, 0.9), -1.3px -1.3px 2px rgba(0, 0, 0, 0.7)
+				text-shadow: 1.3px 2px 1px rgba(0, 0, 0, 0.9), -1.3px -1.3px 2px rgba(0, 0, 0, 0.7)
+				background: -webkit-radial-gradient(rgba(255, 255, 255, 0.27), rgba(255, 255, 255, 0.08), transparent) /* Safari 5.1 to 6.0 */
+				background: -o-radial-gradient(rgba(255, 255, 255, 0.27), rgba(255, 255, 255, 0.08), transparent)/* For Opera 11.6 to 12.0 */
+				background: -moz-radial-gradient(rgba(255, 255, 255, 0.27), rgba(255, 255, 255, 0.08), transparent) /* For Firefox 3.6 to 15 */
+				background: radial-gradient(rgba(255, 255, 255, 0.27), rgba(255, 255, 255, 0.08), transparent)/* Standard syntax (must be last) */
 			a.btn-primary
 				background-color: rgba(0, 0, 0, 0.41)
 				&:hover
@@ -87,10 +93,14 @@ header
 				border-radius: 8px
 			a
 				letter-spacing: 1.2px
+			img 
+				height: auto
+				width: 100%
+				margin: 0 auto
 
 @media(min-width:768px) 
-	header 
-		min-height: 50%
+	// header 
+	// 	min-height: 50%
 	header .header-content 
 		position: absolute
 		top: 50%
@@ -108,15 +118,41 @@ header
 		max-width: 80%
 		font-size: 18px
 
+@media(min-width : 780px) 
+	header 
+		.header-content 
+			.header-content-inner 
+				img 
+					width: 87%
+
+@media(min-width : 960px) 
+	header 
+		// min-height: 50%
+		.header-content 
+			.header-content-inner 
+				img 
+					width: 70%
+
 @media(min-width : 1200px) 
 	header 
-		min-height: 30%
+		.header-content 
+			.header-content-inner 
+				img 
+					width: 75%		
+
+@media(min-width : 1400px) 
+	header 
+		min-height: 50%
+		.header-content 
+			.header-content-inner 
+				img 
+					width: 85%	
 
 section#price_attention_catcher
-	padding: 20px 0
+	padding: 10px 0
 	.section-heading
 		font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif
-		font-size: 16px
+		font-size: 18px
 		line-height: 45px
 	.btn 
 		margin-top: -5px
@@ -131,6 +167,8 @@ section#price_attention_catcher
 			color: #f05f40
 	.btn-xl
 		padding: 12px 20px
+	.text-underline
+		text-decoration: underline
 
 @media(min-width : 1200px) 
 	.section-heading
@@ -189,18 +227,46 @@ section#about
 	.table-cell-align
 		display: table-cell
 		vertical-align: middle
-	p 
+	p, ul
 		padding-left: 10px
-		padding-right: 10px
+		padding-right: 20px
 		font-family: 'Lato', sans-serif
 		font-weight: 300
 		font-size: 18px
+		li
+			margin-top: 12px
+			font-size: 16px
+			list-style-type: circle
+			&.extra-margin
+				margin-top: 10px
 	hr.intro 
 		margin-top: 10px
 		margin-bottom: 20px
 		border-width: 1px
 		border-color: #ccc
 		max-width: 100px
+	.about-list
+		font-size: 16px
+		.text-underline
+			color: #000
+			font-weight: bold
+			margin-bottom: 20px
+	.extra-margin
+		margin-top: 35px
+	.extra-margin-top
+		margin-top: 45px
+		margin-bottom: 10px
+		padding: 0
+		font-size: 17px
+	a 
+		font-size: 16px
+		cursor: pointer
+		margin-bottom: 5px
+	#myCarousel 
+		margin-top: 20px
+	hr 
+		margin-top: 22px
+		margin-bottom: 17px
 
 section#contact
 	.section-heading
@@ -246,6 +312,8 @@ footer
 	color: #fff
 	h3 
 		margin-bottom: 30px
+		&.extra-margin
+			margin-bottom: 15px
 	.footer-above 
 		padding-top: 50px
 		background-color: #f05f40
@@ -388,10 +456,12 @@ nav.navbar-default .navbar-brand
 	font-family: 'Lato', sans-serif
 	font-weight: 300
 	font-size: 16px
+	padding-left: 0
 	ul 
 		list-style-type: none
+		padding-left: 10px
 	p 
-		padding-left: 35px
+		padding-left: 5px
 	.text-black
 		color: #000
 	.extra-margin
@@ -405,6 +475,14 @@ nav.navbar-default .navbar-brand
 		border-color: #999
 		border-width: 1px
 		max-width: 100%
+
+@media(min-width:480px)
+	.modal-body
+		padding-left: 15px
+		p 
+			padding-left: 35px
+		ul 
+			padding-left: 40px
 
 .modal-content
 	.btn 
@@ -457,3 +535,6 @@ aside
 
 .no-padding 
 	padding: 0
+
+.text-underline
+	text-decoration: underline
