--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ header {
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-  min-height: 50%; }
+  min-height: 400px; }
   header .header-content {
     position: relative;
     width: 100%;
@@ -64,7 +64,7 @@ header {
       text-transform: uppercase;
       font-weight: 700;
       font-size: 68px;
-      text-shadow: -1px -2.1px 1px rgba(0, 0, 0, 0.7), 4px 4px 1px rgba(0, 0, 0, 0.8); }
+      text-shadow: -1px -2.1px 1px black, 4px 4px 1px rgba(0, 0, 0, 0.8); }
     header .header-content .header-content-inner p {
       margin-bottom: 50px;
       font-size: 16px;
@@ -75,7 +75,11 @@ header {
       font-size: 26px;
       line-height: 45px;
       text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6), 2px 2px 3px rgba(0, 0, 0, 0.6);
-      text-shadow: 1.3px 1.3px 1px rgba(0, 0, 0, 0.9), -1.3px -1.3px 2px rgba(0, 0, 0, 0.7); }
+      text-shadow: 1.3px 2px 1px rgba(0, 0, 0, 0.9), -1.3px -1.3px 2px rgba(0, 0, 0, 0.7);
+      background: -webkit-radial-gradient(rgba(255, 255, 255, 0.27), rgba(255, 255, 255, 0.08), transparent);
+      background: -o-radial-gradient(rgba(255, 255, 255, 0.27), rgba(255, 255, 255, 0.08), transparent);
+      background: -moz-radial-gradient(rgba(255, 255, 255, 0.27), rgba(255, 255, 255, 0.08), transparent);
+      background: radial-gradient(rgba(255, 255, 255, 0.27), rgba(255, 255, 255, 0.08), transparent); }
     header .header-content .header-content-inner a.btn-primary {
       background-color: rgba(0, 0, 0, 0.41); }
       header .header-content .header-content-inner a.btn-primary:hover {
@@ -84,11 +88,12 @@ header {
       border-radius: 8px; }
     header .header-content .header-content-inner a {
       letter-spacing: 1.2px; }
+    header .header-content .header-content-inner img {
+      height: auto;
+      width: 100%;
+      margin: 0 auto; }
 
 @media(min-width:768px) {
-  header {
-    min-height: 50%; }
-
   header .header-content {
     position: absolute;
     top: 50%;
@@ -107,14 +112,25 @@ header {
     margin-left: auto;
     max-width: 80%;
     font-size: 18px; } }
+@media(min-width : 780px) {
+  header .header-content .header-content-inner img {
+    width: 87%; } }
+@media(min-width : 960px) {
+  header .header-content .header-content-inner img {
+    width: 70%; } }
 @media(min-width : 1200px) {
+  header .header-content .header-content-inner img {
+    width: 75%; } }
+@media(min-width : 1400px) {
   header {
-    min-height: 30%; } }
+    min-height: 50%; }
+    header .header-content .header-content-inner img {
+      width: 85%; } }
 section#price_attention_catcher {
-  padding: 20px 0; }
+  padding: 10px 0; }
   section#price_attention_catcher .section-heading {
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 45px; }
   section#price_attention_catcher .btn {
     margin-top: -5px;
@@ -129,6 +145,8 @@ section#price_attention_catcher {
       color: #f05f40; }
   section#price_attention_catcher .btn-xl {
     padding: 12px 20px; }
+  section#price_attention_catcher .text-underline {
+    text-decoration: underline; }
 
 @media(min-width : 1200px) {
   .section-heading {
@@ -184,18 +202,46 @@ section#about {
   section#about .table-cell-align {
     display: table-cell;
     vertical-align: middle; }
-  section#about p {
+  section#about p, section#about ul {
     padding-left: 10px;
-    padding-right: 10px;
+    padding-right: 20px;
     font-family: "Lato", sans-serif;
     font-weight: 300;
     font-size: 18px; }
+    section#about p li, section#about ul li {
+      margin-top: 12px;
+      font-size: 16px;
+      list-style-type: circle; }
+      section#about p li.extra-margin, section#about ul li.extra-margin {
+        margin-top: 10px; }
   section#about hr.intro {
     margin-top: 10px;
     margin-bottom: 20px;
     border-width: 1px;
     border-color: #ccc;
     max-width: 100px; }
+  section#about .about-list {
+    font-size: 16px; }
+    section#about .about-list .text-underline {
+      color: #000;
+      font-weight: bold;
+      margin-bottom: 20px; }
+  section#about .extra-margin {
+    margin-top: 35px; }
+  section#about .extra-margin-top {
+    margin-top: 45px;
+    margin-bottom: 10px;
+    padding: 0;
+    font-size: 17px; }
+  section#about a {
+    font-size: 16px;
+    cursor: pointer;
+    margin-bottom: 5px; }
+  section#about #myCarousel {
+    margin-top: 20px; }
+  section#about hr {
+    margin-top: 22px;
+    margin-bottom: 17px; }
 
 section#contact .section-heading {
   margin-bottom: 30px; }
@@ -236,6 +282,8 @@ footer {
   color: #fff; }
   footer h3 {
     margin-bottom: 30px; }
+    footer h3.extra-margin {
+      margin-bottom: 15px; }
   footer .footer-above {
     padding-top: 50px;
     background-color: #f05f40; }
@@ -371,11 +419,13 @@ nav.navbar-default .navbar-brand {
 .modal-body {
   font-family: "Lato", sans-serif;
   font-weight: 300;
-  font-size: 16px; }
+  font-size: 16px;
+  padding-left: 0; }
   .modal-body ul {
-    list-style-type: none; }
+    list-style-type: none;
+    padding-left: 10px; }
   .modal-body p {
-    padding-left: 35px; }
+    padding-left: 5px; }
   .modal-body .text-black {
     color: #000; }
   .modal-body .extra-margin {
@@ -390,6 +440,13 @@ nav.navbar-default .navbar-brand {
     border-width: 1px;
     max-width: 100%; }
 
+@media(min-width:480px) {
+  .modal-body {
+    padding-left: 15px; }
+    .modal-body p {
+      padding-left: 35px; }
+    .modal-body ul {
+      padding-left: 40px; } }
 .modal-content .btn {
   border-radius: 3px; }
 .modal-content #MyButton {
@@ -438,5 +495,8 @@ aside {
 
 .no-padding {
   padding: 0; }
+
+.text-underline {
+  text-decoration: underline; }
 
 /*# sourceMappingURL=style.css.map */
