--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ header {
       font-size: 16px;
       font-weight: 300;
       color: #fff; }
-    header .header-content .header-content-inner h3 {
+    header .header-content .header-content-inner h3, header .header-content .header-content-inner h4 {
       font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
       font-size: 26px;
       line-height: 45px;
@@ -80,6 +80,14 @@ header {
       background: -o-radial-gradient(rgba(255, 255, 255, 0.27), rgba(255, 255, 255, 0.08), transparent);
       background: -moz-radial-gradient(rgba(255, 255, 255, 0.27), rgba(255, 255, 255, 0.08), transparent);
       background: radial-gradient(rgba(255, 255, 255, 0.27), rgba(255, 255, 255, 0.08), transparent); }
+    header .header-content .header-content-inner h4 {
+      font-size: 20px;
+      padding: 0;
+      margin: -10px 0 0 0;
+      line-height: inherit;
+      font-style: italic; }
+    header .header-content .header-content-inner h4.hidden-mobile {
+      display: none; }
     header .header-content .header-content-inner a.btn-primary {
       background-color: rgba(0, 0, 0, 0.41); }
       header .header-content .header-content-inner a.btn-primary:hover {
@@ -114,13 +122,19 @@ header {
     font-size: 18px; } }
 @media(min-width : 780px) {
   header .header-content .header-content-inner img {
-    width: 87%; } }
+    width: 87%; }
+  header .header-content .header-content-inner h3 {
+    margin-top: 10px; } }
 @media(min-width : 960px) {
   header .header-content .header-content-inner img {
     width: 70%; } }
 @media(min-width : 1200px) {
   header .header-content .header-content-inner img {
-    width: 75%; } }
+    width: 75%; }
+  header .header-content .header-content-inner h3 {
+    margin-top: 0px; }
+  header .header-content .header-content-inner h4.hidden-mobile {
+    display: inherit; } }
 @media(min-width : 1400px) {
   header {
     min-height: 50%; }
@@ -169,11 +183,18 @@ section#services {
 
 .service-box {
   max-width: 400px;
-  margin: 10px auto 0; }
+  margin: 10px auto 0;
+  min-height: 130px; }
 
 @media only screen and (min-width: 992px) {
   .service-box {
     margin: 20px auto 0; } }
+@media(min-width : 316px) {
+  .service-box {
+    min-height: 110px; } }
+@media(min-width : 768px) {
+  .service-box {
+    min-height: 0; } }
 section#about {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -416,6 +437,14 @@ nav.navbar-default .navbar-brand {
 @media(min-width:992px) {
   .navbar-default .medium-screen-hide {
     display: block; } }
+@media(min-width:1200px) {
+  .navbar-default a.phone {
+    font-size: 23px;
+    padding-top: 13.5px;
+    padding-bottom: 13.5px; }
+
+  .navbar-default .navbar-nav > li > a.phone {
+    color: #565656; } }
 .modal-body {
   font-family: "Lato", sans-serif;
   font-weight: 300;
