--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -189,8 +189,10 @@ section#price_attention_catcher
 		font-size: 20px
 
 @media(min-width : 1200px) 
-	.section-heading
-		font-size: 26px
+	section#price_attention_catcher
+		padding: 15px 0
+		.section-heading
+			font-size: 26px
 
 section#services 
 	padding-top: 14px
