--- a/css/style.css
+++ b/css/style.css
@@ -166,8 +166,10 @@ section#price_attention_catcher {
   .section-heading {
     font-size: 20px; } }
 @media(min-width : 1200px) {
-  .section-heading {
-    font-size: 26px; } }
+  section#price_attention_catcher {
+    padding: 15px 0; }
+    section#price_attention_catcher .section-heading {
+      font-size: 26px; } }
 section#services {
   padding-top: 14px;
   padding-bottom: 12px; }
